crates/jsonschema-codegen/tests/ui/invalid_properties_wildcard_regex.stderr
error: Invalid `patternProperties` regular expression: (
 --> tests/ui/invalid_properties_wildcard_regex.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"properties":{"a":{}},"patternProperties":{"(":{}},"additionalProperties":false}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
